--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "clear": "rm -fr dist",
-    "dev": "nodemon src/index.ts",
-    "ts:node": "ts-node ./src/index.ts",
+    "dev": "ts-node-dev ./src/index.ts",
     "start": "node dist/index.js",
     "build": "tsc"
   },
@@ -14,7 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/IvaanTorres/express-base-template.git"
   },
-  "author": "",
+  "author": "@IvaanTorres",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/IvaanTorres/express-base-template/issues"
@@ -23,8 +22,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
-    "nodemon": "^2.0.15",
-    "ts-node": "^10.5.0",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
   },
   "dependencies": {
